<resources>
    <string name="app_name">Nissens</string>
    <string name="main_title">Nissens Part Finder</string>
    <string name="search_directly">search directly</string>
    <string name="search_by_car">search by car</string>
    <string name="nissens_distribution_agency">nissens distribution agency</string>
    <string name="search_by_type">search by type</string>
    <string name="please_input_search_content">please input search content</string>
    <string name="no_result">no result</string>
    <string name="search">search</string>
    <string name="network_error">network error</string>
    <string name="original_factory_id">original factory ID</string>
    <string name="factory_label">FactoryLabel</string>
    <string name="no_more">no more</string>
    <string name="more_loading">more loading</string>
    <string name="standard">standard</string>
    <string name="normal">normal</string>
    <string name="factory_id">factory ID</string>
    <string name="car_series">car series</string>
    <string name="status">status</string>
    <string name="weight">weight</string>
    <string name="info">info</string>
    <string name="agency">agency</string>
    <string name="please_input_vin">please input vin</string>
    <string name="select_car">select car</string>
    <string name="address">address</string>
    <string name="tel">tel</string>
    <string name="please_select_city">please select city</string>
    <string name="nissens_message">tel: +45 7626 2626\nfax: +45 7564 2205\ne-mail: nissens@nissens.com  </string>
    <string name="search_in_type_results">search in type results</string>
    <string name="length">length</string>
    <string name="width">width</string>
    <string name="height">height</string>
    <string name="capacity">capacity</string>
    <string name="LiYang_id">LiYang ID</string>
    <string name="factory">factory</string>
    <string name="brand">brand</string>
    <string name="car_model">car model</string>
    <string name="name_of_sales">name of sales</string>
    <string name="year">year</string>
    <string name="displacement">displacement</string>
    <string name="gear_box_type">gear box type</string>
    <string name="engine_model">engine model</string>
    <string name="year_in_produce">year in produce</string>
    <string name="retail_price">retail price</string>
    <string name="tech_support"> </string>
    <string name="company_introduction">company introduction</string>
    <string name="standard_specification">standard specification</string>
    <string name="home_page">home page</string>
    <string name="select_type">select type</string>
    <string name="select_factory">select factory</string>
    <string name="select_brand">select brand</string>
    <string name="select_displacement">select displacement</string>
    <string name="select_year">select year</string>
    <string name="must_select_factory">you must select factory firstly!</string>
    <string name="confirm">confirm</string>
    <string name="search_by_car_result">search by car result</string>
    <string name="please_select_specific_car">please select specific car</string>
    <string name="clear_all_search_records">clear all search records</string>
    <string name="search_by_vin">search by vin</string>
    <string name="vin">vin</string>
    <string name="search_result">search result</string>
    <string name="settings">settings</string>
    <string name="clear">clear</string>
    <string name="select_car_series">select car series</string>
    <string name="select_gear_box_type">select gear box type</string>
    <string name="mail">mail</string>
    <string name="e_mail">e-mail</string>
    <string name="web">web</string>
    <string name="car_group">car group</string>
    <string name="select_car_group">select car group</string>
    <string name="hot_type">hot type</string>
    <string name="radiator">radiator</string>
    <string name="compressor">compressor</string>
</resources>
