<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/result_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <include layout="@layout/state_layout" />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hot_type"
                android:padding="10dp"
                android:textColor="?attr/colorPrimary"
                />
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/radiator"
                 android:background="?attr/selectableItemBackground"
                 android:id="@+id/radiator"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/compressor"
                android:background="?attr/selectableItemBackground"
                android:id="@+id/compressor"
                />
        </LinearLayout>
    </LinearLayout>


    <com.nissens.widget.IMMListenerRelativeLayout
        android:id="@+id/view_search"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#50000000"
        android:clickable="true">

    </com.nissens.widget.IMMListenerRelativeLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/card_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        card_view:cardBackgroundColor="?attr/itemBackgroundColor"
        card_view:cardCornerRadius="2dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linearLayout_search"
                android:layout_width="match_parent"
                android:layout_height="48dp">

                <ImageView
                    android:id="@+id/image_search_back"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:padding="12dp"
                    android:src="@mipmap/ic_arrow_back" />

                <EditText
                    android:id="@+id/edit_text_search"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?attr/itemBackgroundColor"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="center_vertical"
                    android:hint="@string/please_input_search_content"
                    android:imeOptions="actionSearch"
                    android:inputType="text"
                    android:paddingLeft="12dp"
                    android:paddingRight="8dp"
                    android:maxLines="1" />

                <ImageView
                    android:id="@+id/clearSearch"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:padding="12dp"
                    android:src="@mipmap/ic_close"
                    android:visibility="gone" />
                <TextView
                    android:id="@+id/clear"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:padding="12dp"
                    android:visibility="gone"
                    android:text="@string/clear"/>
            </LinearLayout>

            <View
                android:id="@+id/line_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/linearLayout_search"
                android:background="?attr/backgroundColor" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/listView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/line_divider"
                android:divider="?attr/itemBackgroundColor"
               />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>